[package]
name = "whale_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whale-cli"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"

[dependencies]
serde_yaml = "0.9.25"
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }
ureq = { version = "2.7.1", features = ["json"] }
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
chrono = { version = "0.4.26", features = ["unstable-locales"] }
console = "0.15.7"
cli-clipboard = "0.4.0"
arc-swap = "1.6.0"
open = "5.0.0"
rusty_pool = "0.7.0"
send_wrapper = "0.6.0"
